// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PackageResource create sends the provided payload as request body 1`] = `
Array [
  "http://demo.com/api/packages",
  Object {
    "body": "{\\"name\\":\\"mock package\\"}",
    "headers": Object {
      "accept": "application/json",
      "authorization": "Basic demoKey",
      "content-type": "application/json",
    },
    "method": "POST",
  },
]
`;

exports[`PackageResource delete sends request to the correct URL 1`] = `
Array [
  "http://demo.com/api/packages/package1",
  Object {
    "headers": Object {
      "accept": "application/json",
      "authorization": "Basic demoKey",
      "content-type": "application/json",
    },
    "method": "DELETE",
  },
]
`;

exports[`PackageResource getAll does not append any query parameter if no parameter is passed in 1`] = `
Array [
  "http://demo.com/api/packages",
  Object {
    "headers": Object {
      "accept": "application/json",
      "authorization": "Basic demoKey",
      "content-type": "application/json",
    },
    "method": "GET",
  },
]
`;

exports[`PackageResource getAll sends the provided parameters as query parameters 1`] = `
Array [
  "http://demo.com/api/packages?query=inbox&predefined=all",
  Object {
    "headers": Object {
      "accept": "application/json",
      "authorization": "Basic demoKey",
      "content-type": "application/json",
    },
    "method": "GET",
  },
]
`;

exports[`PackageResource getAll serializes Date objects into ISO strings 1`] = `
Array [
  "http://demo.com/api/packages?query=inbox&predefined=all&lastUpdatedStartDate=2022-01-10T22%3A05%3A02.242Z&lastUpdatedEndDate=2022-01-10T22%3A05%3A02.242Z",
  Object {
    "headers": Object {
      "accept": "application/json",
      "authorization": "Basic demoKey",
      "content-type": "application/json",
    },
    "method": "GET",
  },
]
`;

exports[`PackageResource getAuditTrail sends request to the correct URL 1`] = `
Array [
  "http://demo.com/api/packages/package1/audit",
  Object {
    "headers": Object {
      "accept": "application/json",
      "authorization": "Basic demoKey",
      "content-type": "application/json",
    },
    "method": "GET",
  },
]
`;

exports[`PackageResource getEvidenceSummary sends request to the correct URL 1`] = `
Array [
  "http://demo.com/api/packages/package1/evidence/summary",
  Object {
    "headers": Object {
      "accept": "application/pdf",
      "authorization": "Basic demoKey",
      "content-type": "application/json",
    },
    "method": "GET",
  },
]
`;

exports[`PackageResource getOne sends request to the correct URL 1`] = `
Array [
  "http://demo.com/api/packages/package1",
  Object {
    "headers": Object {
      "accept": "application/json",
      "authorization": "Basic demoKey",
      "content-type": "application/json",
    },
    "method": "GET",
  },
]
`;

exports[`PackageResource update sends the provided payload as request body 1`] = `
Array [
  "http://demo.com/api/packages/package1",
  Object {
    "body": "{\\"name\\":\\"mock package update\\",\\"status\\":\\"ARCHIVED\\"}",
    "headers": Object {
      "accept": "application/json",
      "authorization": "Basic demoKey",
      "content-type": "application/json",
    },
    "method": "PUT",
  },
]
`;
